add game counter

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <input id="player2" type="text" placeholder="player2" />
       </div>
       <button class="start-button">Start</button>
-      <div class="staus-display"></div>
+      <div class="status-display"></div>
     </div>
     <div class="main">
       <div class="game-board">
