--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="header">
       <h1>Tic Tac Toe</h1>
-      <div class="player-name">
+      <div class="player-container">
         <label for="player1">Enter Players Name:</label>
         <input id="player1" type="text" placeholder="player1" />
         <input id="player2" type="text" placeholder="player2" />
